# ectfy

./: Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
src/: archive.rs  cli.rs  encryption.rs  file_ops.rs  main.rs  metadata.rs  password.rs  selection.rs
