[package]
name = "ectfy"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
aes-gcm = "0.10"
rand = "0.8"
rpassword = "7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
walkdir = "2.3"
sha2 = "0.10"
pbkdf2 = "0.12"
zeroize = "1.7"

[dev-dependencies]
tempfile = "3.10"

